fix overflow in name team

--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -322,7 +322,7 @@ body{
       .all-matches{
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 3rem;
         .match{
           display: flex;
           flex-direction: column;
@@ -355,14 +355,14 @@ body{
           }
           .match-play{
             display: flex;
-            //justify-content: space-between;
             justify-content: space-around;
             align-items: center;
             .team{
               display: flex;
               justify-content: flex-start;
               align-items: center;
-              gap: 0.8rem;
+              padding-right: 0.8rem;
+              //gap: 0.8rem;
               //flex: 1;
               img{
                 width: 7.5rem;
@@ -370,10 +370,20 @@ body{
               span{
                 color: $white;
                 font-size: 1.6rem;
+                width: 11.9vw;
+                overflow: hidden;
+                margin-left: 0.8rem;
               }
             }
             .team-right{
               flex-direction: row-reverse;
+              padding-right: 0;
+              padding-left: 0.8rem;
+              span{
+                margin-left: 0;
+                margin-right: 0.8rem;
+                text-align: right;
+              }
               
             }
             .play-button{
